<resources>
    <string name="app_name">Contact</string>
    <string name="hint_name_contact">Name</string>
    <string name="helper_required">Introduce nombre\n</string>
    <string name="hint_phonenumber">Phone\n</string>
    <string name="hint_email">Email\n</string>
    <string name="hint_contact_group">Group\n</string>
    <string name="hint_workinfo">Work info\n</string>
    <string name="hint_work_phone">Work phone\n</string>
    <string name="label_show_more">\"Show more\"\n</string>
    <string name="label_hide">\"Label hide\"\n</string>
    <string name="hint_nick_name">Nick name</string>
    <string name="favorites">Favorites</string>
    <string name="Groups">Groups</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts">Contacts\n</string>
    <string name="call">Call\n</string>
    <string name="message">message\n</string>
    <string name="delete">Delete\n</string>
    <string name="settings">Settings\n</string>
    <string name="calendar">Calendar</string>
    <string name="events_of_the_day">Event of the day</string>
    <string name="Calendar">Calendar\n</string>
    <string name="edit">Edit\n</string>

</resources>