<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.farbalapps.contactos.frag_home"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_home_to_favorites"
            app:destination="@id/nav_favorites"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"
            app:launchSingleTop="true"/>
        <action
            android:id="@+id/action_home_to_group"
            app:destination="@id/nav_group"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"
            app:launchSingleTop="true"/>

    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.farbalapps.contactos.FragFavorite"
        android:label="@string/favorites">
        <action
            android:id="@+id/action_favorites_to_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"
            app:launchSingleTop="true"/>
        <action
            android:id="@+id/action_favorites_to_group"
            app:destination="@id/nav_group"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"
            app:launchSingleTop="true"/>

    </fragment>

    <fragment
        android:id="@+id/nav_group"
        android:name="com.farbalapps.contactos.FragGroup"
        android:label="@string/Groups">
        <action
            android:id="@+id/action_calls_to_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"
            app:launchSingleTop="true"/>
        <action
            android:id="@+id/action_calls_to_favorites"
            app:destination="@id/nav_favorites"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"
            app:launchSingleTop="true"/>

</fragment>

</navigation>